--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-systemd-kcm (1.2.1.gitc851bc8.4+lliurex1) bionic; urgency=medium
+systemd-kcm (1.2.1.gitc851bc8.4+lliurex1) focal; urgency=medium
 
   * Focal release
 
